# imap-server

./: .gitignore  CHANGELOG  CHANGELOG.md  CNAME  Cargo.toml  Dockerfile  README.md  install.sh  start_server.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  test.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: imap_server.rs
resources/config/: config.yml  config_win.yml
resources/scripts-deb/: postinst  preinst  prerm
resources/systemd/: stalwart-imap.service  stalwart.imap.plist
src/: lib.rs  main.rs
src/commands/: acl.rs  append.rs  authenticate.rs  capability.rs  close.rs  copy_move.rs  create.rs  delete.rs  enable.rs  expunge.rs  fetch.rs  idle.rs  list.rs  login.rs  logout.rs  mod.rs  namespace.rs  noop.rs  rename.rs  search.rs  select.rs  starttls.rs  status.rs  store.rs  subscribe.rs  thread.rs  unselect.rs
src/core/: client.rs  config.rs  connection.rs  env_settings.rs  housekeeper.rs  listener.rs  mailbox.rs  message.rs  mod.rs  receiver.rs  utf7.rs  writer.rs
src/managesieve/: client.rs  connection.rs  listener.rs  mod.rs
src/managesieve/commands/: authenticate.rs  capability.rs  checkscript.rs  deletescript.rs  getscript.rs  havespace.rs  listscripts.rs  logout.rs  mod.rs  noop.rs  putscript.rs  renamescript.rs  setactive.rs  starttls.rs
src/parser/: acl.rs  append.rs  authenticate.rs  copy.rs  copy_move.rs  create.rs  delete.rs  enable.rs  examine.rs  fetch.rs  list.rs  login.rs  lsub.rs  mod.rs  move_.rs  receiver.rs  rename.rs  search.rs  select.rs  sort.rs  status.rs  store.rs  subscribe.rs  thread.rs  unsubscribe.rs
src/protocol/: acl.rs  append.rs  authenticate.rs  capability.rs  copy.rs  copy_move.rs  create.rs  enable.rs  examine.rs  expunge.rs  fetch.rs  list.rs  login.rs  lsub.rs  mod.rs  namespace.rs  rename.rs  search.rs  select.rs  status.rs  store.rs  thread.rs
src/tests/: acl.rs  append.rs  basic.rs  condstore.rs  copy_move.rs  fetch.rs  idle.rs  mailbox.rs  managesieve.rs  mod.rs  search.rs  store.rs  thread.rs
src/tests/resources/imap-test/: copy  esearch-condstore  listext  move  search-addresses  search-body  search-flags  search-header  select  sort-addresses  sort-arrival  sort-size  subscribe  uidvalidity  uidvalidity-rename
src/tests/resources/messages/: 000.imap  001.imap  002.imap  003.imap  004.imap  005.imap  006.imap  007.imap  008.imap  009.imap  010.imap  011.imap  012.imap
