[package]
name = "imap-server"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
jmap-client = { git = "https://github.com/stalwartlabs/jmap-client", features = ["websockets"] }
mail-parser = { git = "https://github.com/stalwartlabs/mail-parser" }
ahash = "0.8.0"
chrono = { version = "0.4"}
tracing-subscriber = "0.3.15"
tracing = "0.1"
rustls = "0.20"
rustls-pemfile = "1.0"
tokio = { version = "1.16.1", features = ["full"] }
tokio-rustls = { version = "0.23.4"}
rayon = "1.5.1"
sled = "0.34.7"
num_cpus = "1.13.1"
futures = "0.3"
parking_lot = "0.12.0"
signal-hook = "0.3.14"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
base64 = "0.13"
md5 = "0.7.0"

[dev-dependencies]


[profile.dev]
opt-level = 0
debug = 1
codegen-units = 4
lto = false
incremental = true
panic = 'unwind'
debug-assertions = true
overflow-checks = false
rpath = false

[profile.release]
opt-level = 3
debug = false
codegen-units = 1
lto = true
incremental = false
panic = 'unwind'
debug-assertions = false
overflow-checks = false
rpath = false
#strip = true

[profile.test]
opt-level = 0
debug = 1
codegen-units = 16
lto = false
incremental = true
debug-assertions = true
overflow-checks = true
rpath = false

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = true
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.deb]
name = "stalwart-imap"
maintainer = "Stalwart Labs Ltd. <hello@stalw.art>"
copyright = "2022, Stalwart Labs Ltd. <hello@stalw.art>"
depends = "$auto"
section = "mail"
license-file = ["LICENSE"]
maintainer-scripts = "resources/scripts-deb"
assets = [
    ["target/release/imap-server", "usr/bin/stalwart-imap", "755"],
    ["resources/config/config.yml", "etc/stalwart-imap/", "600"],
    ["resources/systemd/stalwart-imap.service", "lib/systemd/system/", "644"],
]
conf-files = [
    "/etc/stalwart-imap/config.yml"
]
